--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcsh 'Fiction'
 - !lcsh 'Detective and mystery stories'
 - !lcc 'PR'
+- GITenberg
 title: 'Great Porter Square: A Mystery. v. 1'
 url: http://www.gutenberg.org/ebooks/42905
